--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,24 @@ language: rust
 sudo: false
 matrix:
   include:
-    - rust:
-      - stable
-      - nightly
+    - rust: stable
       install:
         - npm i
-        - rustup component add rustfmt-preview
-      cache: cargo
+      cache:
+        - directories:
+          - node_modules
+          - /home/travis/.cargo
+      before_cache:
+        - rm -rf /home/travis/.cargo/registry
       script:
         - cargo test
         - cargo run --example major_libs --release
-        - cargo +nightly fmt --all -- --check
+      after_script:
+        - git add proptest-regressions
+        - git commit -m "proptest-regressions update [ci skip]"
+        - git push
+      stages:
+        after_script:
+          - if branch in (master, next)
 notifications:
   email: never
